Add verifications to tests

--- a/pom.xml
+++ b/pom.xml
@@ -425,6 +425,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.6</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <profiles>
