--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
                 <directory>src/main/java</directory>
                 <excludes><exclude>*.java</exclude></excludes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
         </resources>
 
         <plugins>
