--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.4.32</kotlin.version>
+        <version.kotlin>1.4.32</version.kotlin>
+        <version.jdk>11</version.jdk>
 
         <jvm.args.debug></jvm.args.debug> <!-- Used by the -Pdebug profile. -->
         <mainClass>Crunch</mainClass>
@@ -311,7 +312,7 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>${kotlin.version}</version>
+                <version>${version.kotlin}</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -325,7 +326,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>14</jvmTarget>
+                    <jvmTarget>${version.jdk}</jvmTarget>
                 </configuration>
             </plugin>
 
@@ -339,8 +340,8 @@
                 </executions>
                 <inherited>true</inherited>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>${version.jdk}</source>
+                    <target>${version.jdk}</target>
                     <optimize>true</optimize>
                     <debug>true</debug>
                     <encoding>utf-8</encoding>
@@ -376,6 +377,17 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${version.kotlin}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+            <version>${version.kotlin}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -460,15 +472,11 @@
             <version>1.8</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test</artifactId>
-            <version>${kotlin.version}</version>
+            <version>${version.kotlin}</version>
             <scope>test</scope>
         </dependency>
 
