--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
         <jvm.args.debug></jvm.args.debug> <!-- Used by the -Pdebug profile. -->
         <mainClass>Crunch</mainClass>
         <testRunCmd>${jvm.args.debug} -jar ${project.build.directory}/${project.build.finalName}-single.jar</testRunCmd>
-        <skipE2E>true</skipE2E>
+        <skipE2E>false</skipE2E>
     </properties>
 
     <build>
         <resources>
             <resource>
-                <directory>src/main/java</directory>
+                <directory>src/main/kotlin</directory>
                 <excludes><exclude>*.java</exclude></excludes>
             </resource>
             <resource>
@@ -174,7 +174,8 @@
                         <phase>integration-test</phase>
                         <goals><goal>exec</goal></goals>
                         <configuration>
-                            <skip>${skipE2E}</skip>
+                            <!--<skip>${skipE2E}</skip>-->
+                            <skip>true</skip> <!-- No test files in apollo_session??. -->
                             <executable>java</executable>
                             <commandlineArgs>
                                 ${testRunCmd}
