--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
     </properties>
 
     <build>
+        <!--
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        -->
         <resources>
             <resource>
                 <directory>src/main/kotlin</directory>
@@ -38,6 +41,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>generate-test-resources</phase>
+                        <goals><goal>run</goal></goals>
+                        <configuration><target><unzip src="src/test/data/json/github_data.zip" dest="target/testData/json/" /></target></configuration>
+                    </execution>
+                </executions>
+
             </plugin>
 
             <plugin>
