--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.zizka.csvcruncher</groupId>
     <artifactId>csv-cruncher</artifactId>
-    <version>1.14.0</version>
+    <version>1.15.0</version>
 
     <name>CsvCruncher</name>
     <description>Treats CSV files as SQL tables, and exports SQL SELECTs back to CSV or JSON.</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.kotlin>1.4.32</version.kotlin>
+        <version.kotlin>1.5.31</version.kotlin>
         <version.jdk>11</version.jdk>
+        <version.jackson>2.12.5</version.jackson>
 
         <jvm.args.debug></jvm.args.debug> <!-- Used by the -Pdebug profile. -->
         <mainClass>Crunch</mainClass>
@@ -21,6 +22,9 @@
     </properties>
 
     <build>
+        <!--
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        -->
         <resources>
             <resource>
                 <directory>src/main/kotlin</directory>
@@ -37,6 +41,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>generate-test-resources</phase>
+                        <goals><goal>run</goal></goals>
+                        <configuration><target><unzip src="src/test/data/json/github_data.zip" dest="target/testData/json/" /></target></configuration>
+                    </execution>
+                </executions>
+
             </plugin>
 
             <plugin>
@@ -435,6 +452,11 @@
             <version>1.1.4</version>
         </dependency>
 
+        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-core</artifactId><version>2.12.3</version></dependency>
+        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>2.12.3</version></dependency>
+        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-annotations</artifactId><version>2.12.3</version></dependency>
+        <dependency><groupId>com.fasterxml.jackson.module</groupId><artifactId>jackson-module-kotlin</artifactId><version>2.12.3</version></dependency>
+        <dependency><groupId>com.fasterxml.jackson.dataformat</groupId><artifactId>jackson-dataformat-cbor</artifactId><version>2.12.3</version></dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -460,12 +482,9 @@
         </dependency>
 
         <!-- Test deps -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
+        <dependency><groupId>org.junit.jupiter</groupId><artifactId>junit-jupiter</artifactId><version>5.7.0</version><scope>test</scope></dependency>
+        <dependency><groupId>org.junit.jupiter</groupId><artifactId>junit-jupiter-params</artifactId><version>5.7.0</version><scope>test</scope></dependency>
+        <dependency><groupId>org.assertj</groupId><artifactId>assertj-core</artifactId><version>3.21.0</version><scope>test</scope></dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -480,6 +499,10 @@
             <version>${version.kotlin}</version>
             <scope>test</scope>
         </dependency>
+        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-core</artifactId><version>${version.jackson}</version></dependency>
+        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-annotations</artifactId><version>${version.jackson}</version></dependency>
+        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>${version.jackson}</version></dependency>
+        <dependency><groupId>com.fasterxml.jackson.module</groupId><artifactId>jackson-module-kotlin</artifactId><version>${version.jackson}</version></dependency>
 
     </dependencies>
 
