--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.15.0</version>
 
     <name>CsvCruncher</name>
-    <description>Treats CSV files as SQL tables, and exports SQL SELECTs back to CSV or JSON.</description>
+    <description>Treats CSV or JSON files as SQL tables, and exports SQL SELECTs back to CSV or JSON.</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
