--- a/pom.xml
+++ b/pom.xml
@@ -22,18 +22,24 @@
     </properties>
 
     <build>
-        <!--
         <sourceDirectory>src/main/kotlin</sourceDirectory>
-        -->
         <resources>
+            <!--
             <resource>
                 <directory>src/main/kotlin</directory>
-                <excludes><exclude>*.java</exclude></excludes>
+                <excludes><exclude>*.java</exclude><exclude>*.kt</exclude></excludes>
             </resource>
+            -->
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/kotlin</directory>
+                <excludes><exclude>*.java</exclude><exclude>*.kt</exclude></excludes>
+            </testResource>
+        </testResources>
 
         <plugins>
 
@@ -41,6 +47,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
+                <configuration>
+                    <includes>
+                        <include>**/*.class</include>
+                        <exclude>**/*.kt</exclude>
+                    </includes>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -311,7 +323,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M2</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>enforce-maven</id>
@@ -319,7 +331,7 @@
                         <configuration>
                             <rules>
                                 <requireMavenVersion>
-                                    <version>3.6.0</version>
+                                    <version>3.8.1</version>
                                 </requireMavenVersion>
                             </rules>
                         </configuration>
@@ -332,29 +344,23 @@
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${version.kotlin}</version>
                 <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
-                        <goals><goal>compile</goal></goals>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <phase>test-compile</phase>
-                        <goals><goal>test-compile</goal></goals>
-                    </execution>
+                    <execution><id>compile</id><phase>compile</phase><goals><goal>compile</goal></goals></execution>
+                    <execution><id>test-compile</id><phase>test-compile</phase><goals><goal>test-compile</goal></goals></execution>
                 </executions>
                 <configuration>
                     <jvmTarget>${version.jdk}</jvmTarget>
                 </configuration>
             </plugin>
 
+            <!-- Maven Compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <executions>
-                    <execution><id>compile</id><phase>compile</phase><goals><goal>compile</goal></goals></execution>
-                    <execution><id>testCompile</id><phase>test-compile</phase><goals><goal>testCompile</goal></goals></execution>
+                    <!-- Short-circuit the special treatment of default-compile executions. See https://kotlinlang.org/docs/reference/using-maven.html -->
+                    <execution><id>default-compile</id><phase>none</phase></execution>
+                    <execution><id>default-testCompile</id><phase>none</phase></execution>
                 </executions>
                 <inherited>true</inherited>
                 <configuration>
@@ -458,28 +464,14 @@
         <dependency><groupId>com.fasterxml.jackson.module</groupId><artifactId>jackson-module-kotlin</artifactId><version>2.12.3</version></dependency>
         <dependency><groupId>com.fasterxml.jackson.dataformat</groupId><artifactId>jackson-dataformat-cbor</artifactId><version>2.12.3</version></dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
-        </dependency>
+        <dependency> <groupId>org.projectlombok</groupId> <artifactId>lombok</artifactId> <version>1.18.20</version> </dependency>
+        <!--
+        -->
 
         <!-- Logging -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.2.3</version>
-        </dependency>
+        <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>1.7.25</version></dependency>
+        <dependency><groupId>ch.qos.logback</groupId><artifactId>logback-classic</artifactId><version>1.2.3</version></dependency>
+        <dependency><groupId>ch.qos.logback</groupId><artifactId>logback-core</artifactId><version>1.2.3</version></dependency>
 
         <!-- Test deps -->
         <dependency><groupId>org.junit.jupiter</groupId><artifactId>junit-jupiter</artifactId><version>5.7.0</version><scope>test</scope></dependency>
@@ -499,10 +491,6 @@
             <version>${version.kotlin}</version>
             <scope>test</scope>
         </dependency>
-        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-core</artifactId><version>${version.jackson}</version></dependency>
-        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-annotations</artifactId><version>${version.jackson}</version></dependency>
-        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>${version.jackson}</version></dependency>
-        <dependency><groupId>com.fasterxml.jackson.module</groupId><artifactId>jackson-module-kotlin</artifactId><version>${version.jackson}</version></dependency>
 
     </dependencies>
 
