--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.zizka.csvcruncher</groupId>
     <artifactId>csv-cruncher</artifactId>
-    <version>1.15.0</version>
+    <version>1.31.0-SNAPSHOT</version>
 
     <name>CsvCruncher</name>
     <description>Treats CSV or JSON files as SQL tables, and exports SQL SELECTs back to CSV or JSON.</description>
     <scm>
         <url>https://github.com/OndraZizka/csv-cruncher</url>
-        <developerConnection>git@github.com:OndraZizka/csv-cruncher.git</developerConnection>
+        <connection>scm:git:https://github.com/OndraZizka/csv-cruncher.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:OndraZizka/csv-cruncher.git</developerConnection>
     </scm>
 
     <properties>
