Move app launching code to .app

--- a/src/scripts/jul.properties
+++ b/src/scripts/jul.properties
@@ -23,8 +23,8 @@ java.util.logging.FileHandler.append = true
 
 #global.formatter = cz.dynawest.logging.SimplestFormatter
 #root.formatter = cz.dynawest.logging.SimplestFormatter
-#cz.dynawest.csvcruncher.App.formatter = cz.dynawest.logging.SimplestFormatter
-#cz.dynawest.csvcruncher.App.handlers = java.util.logging.ConsoleHandler
+#cz.dynawest.csvcruncher.app.App.formatter = cz.dynawest.logging.SimplestFormatter
+#cz.dynawest.csvcruncher.app.App.handlers = java.util.logging.ConsoleHandler
 #.useParentHandlers = false
 
 
