--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.zizka.csvcruncher</groupId>
     <artifactId>csv-cruncher</artifactId>
-    <version>1.31.0</version>
+    <version>1.32.0-SNAPSHOT</version>
 
     <name>CsvCruncher</name>
     <description>Treats CSV or JSON files as SQL tables, and exports SQL SELECTs back to CSV or JSON.</description>
@@ -67,27 +67,6 @@
                 </executions>
             </plugin>
 
-            <!-- Generate a JavaDoc and source jars -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-source-plugin</artifactId><version>3.2.1</version>
-                <configuration><includes>**/*.kt</includes></configuration>
-                <executions><execution><id>attach-sources</id><goals><goal>jar</goal></goals></execution></executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId><version>3.3.1</version>
-                <executions><execution><id>attach-javadocs</id><goals><goal>jar</goal></goals></execution></executions>
-            </plugin>
-            <!-- <plugin> <groupId>org.jetbrains.kotlin</groupId> <artifactId>kdoc-maven-plugin</artifactId> <version>${version.kotlin}</version> </plugin> -->
-            <plugin>
-                <groupId>org.jetbrains.dokka</groupId>
-                <artifactId>dokka-maven-plugin</artifactId>
-                <version>${version.kotlin}</version>
-                <executions>
-                    <execution><id>dokka-site</id><phase>pre-site</phase><goals><goal>dokka</goal></goals></execution>
-                    <execution><id>dokka-jar</id><phase>package</phase><goals><goal>javadocJar</goal></goals></execution>
-                </executions>
-                <configuration><dokkaPlugins><plugin><groupId>org.jetbrains.dokka</groupId><artifactId>kotlin-as-java-plugin</artifactId><version>${version.kotlin}</version></plugin></dokkaPlugins></configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -484,6 +463,29 @@
             <build>
                 <plugins>
 
+                    <!-- Generate a JavaDoc and source jars -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId><artifactId>maven-source-plugin</artifactId><version>3.2.1</version>
+                        <configuration><includes>**/*.kt</includes></configuration>
+                        <executions><execution><id>attach-sources</id><goals><goal>jar</goal></goals></execution></executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId><version>3.3.1</version>
+                        <executions><execution><id>attach-javadocs</id><goals><goal>jar</goal></goals></execution></executions>
+                    </plugin>
+                    <!-- <plugin> <groupId>org.jetbrains.kotlin</groupId> <artifactId>kdoc-maven-plugin</artifactId> <version>${version.kotlin}</version> </plugin> -->
+                    <plugin>
+                        <groupId>org.jetbrains.dokka</groupId>
+                        <artifactId>dokka-maven-plugin</artifactId>
+                        <version>${version.kotlin}</version>
+                        <executions>
+                            <execution><id>dokka-site</id><phase>pre-site</phase><goals><goal>dokka</goal></goals></execution>
+                            <execution><id>dokka-jar</id><phase>package</phase><goals><goal>javadocJar</goal></goals></execution>
+                        </executions>
+                        <configuration><dokkaPlugins><plugin><groupId>org.jetbrains.dokka</groupId><artifactId>kotlin-as-java-plugin</artifactId><version>${version.kotlin}</version></plugin></dokkaPlugins></configuration>
+                    </plugin>
+
+                    <!-- Release plugin -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
@@ -508,9 +510,7 @@
                         </configuration>
                     </plugin>
 
-                    <!-- It relies on the gpg command being installed and the GPG credentials being available e.g. from settings.xml.
-                         In addition you can configure the gpg command in case it is different from gpg.
-                         This is a common scenario on some operating systems. -->
+                    <!-- This relies on the gpg command being installed and the GPG credentials being available e.g. from settings.xml. -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
@@ -521,6 +521,7 @@
                                 <phase>verify</phase>
                                 <goals><goal>sign</goal></goals>
                                 <configuration>
+                                    <!-- Remember to run this before Maven build: export GPG_TTY=$(tty) -->
                                     <keyname>73BA361CA92D829800730DE207838E30786B5257</keyname>
                                     <passphrase>${gpg.passphrase}</passphrase>
                                     <executable>${gpg.executable}</executable>
