--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
                 <excludes><exclude>*.java</exclude><exclude>*.kt</exclude></excludes>
             </testResource>
         </testResources>
+        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
 
         <plugins>
 
@@ -352,6 +353,9 @@
                 </executions>
                 <configuration>
                     <jvmTarget>${version.jdk}</jvmTarget>
+                    <sourceDirs>
+                        <sourceDir>src/main/kotlin</sourceDir>
+                    </sourceDirs>
                 </configuration>
             </plugin>
 
