--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <version.kotlin>1.5.31</version.kotlin>
         <version.jdk>11</version.jdk>
         <version.jackson>2.13.0</version.jackson>
+        <version.surefire>3.0.0-M5</version.surefire>
 
         <jvm.args.debug /> <!-- Used by the -Pdebug profile. -->
         <mainClass>Crunch</mainClass>
@@ -72,7 +73,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>${version.surefire}</version>
                 <configuration>
                     <systemPropertyVariables>
                         <test.data.dir>${project.build.testSourceDirectory}/../data</test.data.dir>
@@ -85,7 +86,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>${version.surefire}</version>
                 <configuration>
                     <systemPropertyVariables>
                         <test.cruncher.runCmd>${testRunCmd}</test.cruncher.runCmd>
