#59 Move all integration tests from Maven to JUnit

--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
             <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-dependency-plugin</artifactId><version>3.2.0</version></plugin>
 
 
-            <!-- A "test suite". -->
+            <!-- One real execution of the tool from outside JUnit. -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -184,144 +184,6 @@
                                 CAST(warmupDur AS DOUBLE) / CAST(deployDur AS DOUBLE) AS warmupSlower
                                 FROM eapBuilds ORDER BY deployDur'
                             </commandlineArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>testCrunch-combineInputFile</id>
-                        <phase>integration-test</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <skip>${skipE2E}</skip>
-                            <executable>java</executable>
-                            <commandlineArgs>
-                                ${testRunCmd}
-                                --json=entries
-                                --rowNumbers
-                                --combineInputs
-                                -in src/test/data/eapBuilds.csv
-                                -out target/results/result.csv
-                                -sql 'SELECT jobName, buildNumber, config, ar, arFile, deployDur, warmupDur, scale,
-                                CAST(warmupDur AS DOUBLE) / CAST(deployDur AS DOUBLE) AS warmupSlower
-                                FROM eapBuilds ORDER BY deployDur'
-                            </commandlineArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>testCrunch-combineInputFiles-perRootSubDir</id>
-                        <phase>integration-test</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <!--<skip>${skipE2E}</skip>-->
-                            <skip>true</skip> <!-- No test files in apollo_session??. -->
-                            <executable>java</executable>
-                            <commandlineArgs>
-                                ${testRunCmd}
-                                --json=entries
-                                --rowNumbers
-                                --combineInputs=concat
-                                --combineDirs=all
-                                --exclude=.*/LOAD.*\.csv
-                                -in src/test/data/sampleMultiFilesPerDir/apollo_session/
-                                -out target/results/result.csv
-                                -sql 'SELECT session_uid, name, session_type, created_time, modified_date
-                                FROM concat ORDER BY session_type, created_time DESC'
-                            </commandlineArgs>
-                        </configuration>
-                    </execution>
-                    <!-- SELECT *  used with - -rowNumbers -->
-                    <execution>
-                        <id>testCrunch-combineInputFiles-selectStar-negative</id>
-                        <phase>integration-test</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <skip>${skipE2E}</skip>
-                            <executable>java</executable>
-                            <commandlineArgs>
-                                ${testRunCmd}
-                                --json --combineInputs --rowNumbers
-                                --exclude=.*/LOAD.*\.csv
-                                -in src/test/data/sampleMultiFilesPerDir/session_telephony_pins/
-                                -out target/results/session_telephony_pins.csv
-                                -sql 'SELECT * FROM session_telephony_pins'
-                            </commandlineArgs>
-                            <!-- Suppress output. This will fail because the input files don't match. -->
-                            <outputFile>${project.build.outputDirectory}/testOutput</outputFile>
-                            <successCodes>
-                                <code>1</code>
-                                <code>2</code>
-                            </successCodes>
-                        </configuration>
-                    </execution>
-                    <!-- SELECT myTable.*  used with - -rowNumbers -->
-                    <execution>
-                        <id>testCrunch-combineInputFiles-selectStar-qualified</id>
-                        <phase>integration-test</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <skip>${skipE2E}</skip>
-                            <executable>java</executable>
-                            <commandlineArgs>
-                                ${testRunCmd}
-                                --json --combineInputs --rowNumbers
-                                --exclude=.*/LOAD.*\.csv
-                                -in src/test/data/sampleMultiFilesPerDir/session_telephony_pins/
-                                -out target/results/session_telephony_pins.csv
-                                -sql 'SELECT session_telephony_pins.* FROM session_telephony_pins'
-                            </commandlineArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>testCrunch-collab-ARG</id>
-                        <phase>integration-test</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <skip>${skipE2E}</skip>
-                            <executable>java</executable>
-                            <commandlineArgs>
-                                ${testRunCmd}
-                                --json --combineInputs
-                                --exclude=.*/LOAD.*\.csv
-                                -in src/test/data/sample-collab/apollo_recording_group/
-                                -out target/results/apollo_recording_group.csv
-                                -sql 'SELECT * FROM apollo_recording_group'
-                            </commandlineArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>testCrunch-collab-STP</id>
-                        <phase>integration-test</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <skip>${skipE2E}</skip>
-                            <executable>java</executable>
-                            <commandlineArgs>
-                                ${testRunCmd}
-                                --json --combineInputs
-                                --exclude=.*/LOAD.*\.csv
-                                -in src/test/data/sample-collab/session_telephony_pins/
-                                -out target/results/session_telephony_pins.csv
-                                -sql 'SELECT * FROM session_telephony_pins'
-                            </commandlineArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>testVersion</id>
-                        <phase>integration-test</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <skip>${skipE2E}</skip>
-                            <executable>java</executable>
-                            <commandlineArgs>${testRunCmd} -v</commandlineArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>testHelp</id>
-                        <phase>integration-test</phase>
-                        <goals><goal>exec</goal></goals>
-                        <configuration>
-                            <skip>${skipE2E}</skip>
-                            <executable>java</executable>
-                            <commandlineArgs>${testRunCmd} -h</commandlineArgs>
                         </configuration>
                     </execution>
                 </executions>
