Update printUsage() to match 2.x input style

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,10 @@
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
+            <resource>
+                <directory>./</directory>
+                <includes><include>README.md</include></includes>
+            </resource>
         </resources>
         <testResources>
             <testResource>
